fix: scrollbar in tab and code tabs #73

--- a/theme/src/client/styles/md-enhance.scss
+++ b/theme/src/client/styles/md-enhance.scss
@@ -155,6 +155,7 @@
   .vp-code-tabs-nav {
     padding: 0 12px;
     margin: 0.85rem 0 0;
+    overflow-y: hidden;
     background-color: var(--vp-code-tab-bg);
     box-shadow: inset 0 -1px var(--vp-code-tab-divider);
     transition: background-color var(--t-color), box-shadow var(--t-color);
